<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MazeActivity">

    <view
        android:id="@+id/mazeView"
        class="com.example.maze.MazeView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toTopOf="@+id/upwardButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/leftButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/mazeLeftButton"
        android:onClick="clickDirectionButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_arrow_left_black_24dp" />

    <ImageButton
        android:id="@+id/upwardButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/mazeUpwardButton"
        android:onClick="clickDirectionButton"
        app:layout_constraintBottom_toTopOf="@+id/downwardButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_arrow_upward_black_24dp" />

    <ImageButton
        android:id="@+id/rightButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/mazeRightButton"
        android:onClick="clickDirectionButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_arrow_right_black_24dp" />

    <ImageButton
        android:id="@+id/downwardButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/mazeDownwardButton"
        android:onClick="clickDirectionButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_arrow_downward_black_24dp" />

    <Button
        android:id="@+id/mazeQuitButton"
        android:layout_width="65dp"
        android:layout_height="45dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:onClick="clickFunctionButton"
        android:text="@string/mazeQuitButton"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/mazeSaveButton"
        android:layout_width="65dp"
        android:layout_height="45dp"
        android:layout_marginStart="6dp"
        android:onClick="clickFunctionButton"
        android:text="@string/mazeSaveButton"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/mazeQuitButton"
        app:layout_constraintStart_toEndOf="@+id/mazeQuitButton" />

    <Button
        android:id="@+id/mazeRecreateButton"
        android:layout_width="85dp"
        android:layout_height="45dp"
        android:layout_marginStart="6dp"
        android:onClick="clickFunctionButton"
        android:text="@string/mazeRecreateButton"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/mazeSaveButton"
        app:layout_constraintStart_toEndOf="@+id/mazeSaveButton" />

    <Button
        android:id="@+id/mazeRestartButton"
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:layout_marginStart="6dp"
        android:onClick="clickFunctionButton"
        android:text="@string/mazeRestartButton"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/mazeRecreateButton"
        app:layout_constraintStart_toEndOf="@+id/mazeRecreateButton" />

    <Button
        android:id="@+id/mazeHintButton"
        android:layout_width="65dp"
        android:layout_height="45dp"
        android:layout_marginStart="6dp"
        android:text="@string/mazeHintButton"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/mazeRestartButton"
        app:layout_constraintStart_toEndOf="@+id/mazeRestartButton" />

</androidx.constraintlayout.widget.ConstraintLayout>